<resources>
    <string name="app_name">Assignment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_description">Foodie Logo</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="foodie">Foodie</string>
    <string name="welcome_to_foodie">Welcome to Foodie! 😊</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up_here">New to this? Sign up here</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password">Current password</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="strawberry">Strawberry Farm</string>
    <string name="address">H&#8211;2&#8211;9 Tanjung Bungah, Jalan Besi, 11600 Pulau Pinang</string>
    <string name="contact">Contact Number : 0123456789</string>
    <string name="business_hour">Business Hour : 10.00am - 10.00pm</string>
    <string name="review"><b>Reviews</b></string>
    <string name="name">John Berg</string>
    <string name="description">Great restaurant !! I recommend all of you go to try it and taste it out !! It is the best restaurant I\'ve ever seen!</string>
    <string name="edit_review">Edit</string>
    <string name="delete_review">Delete</string>
    <string name="review_menu" />
    <string name="enter_you_review">Enter you review</string>
    <string name="restaurant_name">Name</string>
    <string name="favourites">Favourites</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="logout">Logout</string>
    <string name="add_floating_action_button">Add floating action button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_restaurant">Add New Restaurant</string>
    <string name="select_image">Select Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_hours">Open Hours</string>
    <string name="closing_hours">Closing Hours</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_contact_no">Restaurant Contact No.</string>
    <string name="restaurant_description">Restaurant Description</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome back! 👋</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>